--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% block head %}
 
-<body>
-    Hello World 2
-</body>
+{% endblock %}
 
-</html>
+{% block body %}
+<div class="content">
+    <h1>Task Master</h1>
+
+    <table>
+        <tr>
+            <th>Task</th>
+            <th>Added</th>
+            <th>Actions</th>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td>
+                <a href="http://">Delete</a>
+                <br>
+                <a href="http://">Update</a>
+            </td>
+        </tr>
+    </table>
+</div>
+{% endblock %}
