--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,9 @@
             <td>{{ task.content }}</td>
             <td>{{ task.date_created.date() }}</td>
             <td>
-                <a href="http://">Delete</a>
+                <a href="/delete/{{task.id}}">Delete</a>
                 <br>
-                <a href="http://">Update</a>
+                <a href="/update/{{task.id}}">Update</a>
             </td>
         </tr>
         {% endfor %}
