--- a/templates/update.html
+++ b/templates/update.html
@@ -8,9 +8,9 @@
 <div class="content">
     <h1>Update Task</h1>
     <div class="form">
-        <form action="/update{{task.id}}" method="post">
+        <form action="/update/{{task.id}}" method="post">
             <input type="text" name="content" id="content" value="{{task.content}}">
-            <input type="submit" value="Add Task">
+            <input type="submit" value="Update">
         </form>
     </div>
 </div>
